# gmockdemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: class_network.puml
licenses/: INFO.md
src/: CMakeLists.txt  main.cpp
src/ConnectionManager/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  EthNetworkConnection.cpp  EthNetworkConnection.h  INetworkSource.h
